--- a/ogncy_onelove/scss/main.scss
+++ b/ogncy_onelove/scss/main.scss
@@ -9,6 +9,7 @@
 @import 'sections/mmenu.scss';
 @import 'sections/components.scss';
 @import 'sections/main-page.scss';
+@import 'sections/projects.scss';
 @import 'sections/footer.scss';
 
 @import "media"; // Always at the end
