--- a/ogncy_onelove/scss/_media.scss
+++ b/ogncy_onelove/scss/_media.scss
@@ -5,6 +5,23 @@
 
 // ≥1200px
 @include media-breakpoint-down(lg) {
+    //! Projects page
+    .projects-grid {
+        &-item {
+            margin-bottom: 30px;
+            width: 100%;
+            flex-direction: row-reverse;
+            justify-content: flex-end;
+
+            &__thumbnail {
+                border-top-left-radius: 5px;
+                border-bottom-left-radius: 5px;
+                border-top-right-radius: 0;
+                border-bottom-right-radius: 0;
+            }
+        }
+    }
+
 	//! Header
     .header {
         padding: 25px 0;
@@ -119,6 +136,14 @@
 
 // ≥992px
 @include media-breakpoint-down(md) {
+    //! Projects page
+    .projects-introduction {
+        p {
+            margin-top: 25px;
+            max-width: none;
+        }
+    }
+
     //! Header
     // .header {
     //     .soc-link {
@@ -259,6 +284,16 @@
 
 // ≥768px
 @include media-breakpoint-down(sm) {
+    //! Projects page
+    .projects-grid {
+        &-item {
+            &__thumbnail {
+                min-width: 208px;
+                max-width: 235px;
+            }
+        }
+    }
+
     //! Header
     .header {
         padding: 10px 0;
@@ -384,12 +419,54 @@
 
 // ≥576px
 @include media-breakpoint-down(xs) {
+    //! Projects page
+    .projects-introduction {
+        &-title {
+    
+            h1 {
+                font-size: em(50px);
+            }
+    
+            svg {
+                width: 40px;
+                margin-left: 25px;
+            }
+        }
+    }
+
+    .projects-categories {
+        margin: 0 -10px;
+    
+        &__category {
+            margin: 10px;
+            min-width: 50px;
+        }
+    }
+
+    .projects-grid {
+        &-item {
+            flex-direction: column-reverse;
+
+            &__thumbnail {
+                width: 100%;
+                height: 250px;
+                max-width: none;
+                min-width: none;
+                background-position: center;
+            }
+        }
+    }
+
     //! Header 
     .header {
         padding: 10px;
 
         &.fixed {
             padding: 10px;
+        }
+
+        .logo img {
+            max-width: 150px;
         }
 
         &-btns {
@@ -463,6 +540,10 @@
 
     //! Services section
     .services-section {
+        .service-sidebar .overflow {
+            height: 400px;
+        }
+
         &__title {
             font-size: em(70px);
         }
@@ -470,7 +551,7 @@
 
     //! Section title
     .section-title {
-        font-size: em(37px);
+        font-size: em(30px);
     }
 
     //! Team section
@@ -531,6 +612,15 @@
         }
     }
 
+    //! Clients 2
+    .section-clients-2 {
+        .client-slide {
+            img {
+                max-width: 120px;
+            }
+        }
+    }
+
     //! Useful links
     .section-useful-links {
         &__banner {         
@@ -540,11 +630,18 @@
         }
     }
 
+    //! Feedback
+    .section-feedback {
+        &__title {
+            font-size: em(30px);
+        }
+    }
+
     //! Express audit
     .section-express {
         .section-title {
             margin-top: 0;
-            font-size: em(35px);
+            font-size: em(30px);
 
             &.top {
                 &:after {
@@ -555,9 +652,15 @@
         }
 
         .express-audit-form {  
+            padding: 30px 15px;
+
             &__field {
                 padding: 15px 55px;
-                width: auto;
+                width: 100%;
+            }
+
+            &__submit {
+                width: 100%;
             }
         }
     }
