--- a/ogncy_onelove/scss/sections/header.scss
+++ b/ogncy_onelove/scss/sections/header.scss
@@ -1,3 +1,7 @@
+#my-page {
+    z-index: 0 !important;
+}
+
 .header {
     width: 100%;
     padding: 30px 0;
@@ -9,6 +13,7 @@
         top: 0;
         position: fixed;
         z-index: 888;
+        background: #fff;
         // padding: 20px 0;
     }
     
