--- a/ogncy_onelove/scss/main.scss
+++ b/ogncy_onelove/scss/main.scss
@@ -10,6 +10,7 @@
 @import 'sections/components.scss';
 @import 'sections/main-page.scss';
 @import 'sections/projects.scss';
+@import 'sections/services.scss';
 @import 'sections/footer.scss';
 
 @import "media"; // Always at the end
