--- a/ogncy_onelove/scss/_media.scss
+++ b/ogncy_onelove/scss/_media.scss
@@ -480,6 +480,10 @@
             font-size: em(35px);
         }
 
+        &__pointer {
+            display: none;
+        }
+
         &__call-text {
             margin-top: 30px;
     
