--- a/Autoparts/scss/sections/header.scss
+++ b/Autoparts/scss/sections/header.scss
@@ -1,18 +1,49 @@
 //! Header
 .header {
     width: 100%;
-    padding-top: 35px;
+    // padding-top: 10px;
     padding-bottom: 10px;
     background-color: #fff;
 
     &-menu {
-        @include flexbox(space-between, center);
+        @include flexbox(center, stretch);
         width: 100%;
+        height: 60px;
 
         &__item {
-            text-transform: uppercase;
-            font-size: em(12px);
-            font-weight: 500;
+            flex: 1;
+            height: 100%;
+
+            a {
+                @include flexbox(center, center);
+                position: relative;
+                z-index: 1;
+                height: 100%;
+                // padding: 20px 0;
+                overflow: hidden;
+                text-transform: uppercase;
+                text-align: center;
+                font-size: em(12px);
+                font-weight: 500;
+
+                &:hover {
+                    &:before {
+                        top: 0;
+                    }
+                }
+    
+                &:before {
+                    position: absolute;
+                    left: 50%;
+                    top: -100%;
+                    transform: translateX(-50%);
+                    z-index: -1;
+                    @include box(100%);
+                    content: '';
+                    background: $yellow;
+                    transition: all .3s ease;
+                }
+            }
         }
     }
 }
@@ -24,6 +55,7 @@
 //! Sidebar
 .fixed-column {
     overflow-y: auto;
+    overflow-x: hidden;
     height: 100vh;
     position: fixed;
     z-index: 777;
@@ -56,8 +88,27 @@
 .catalog {
     // Items
     &__item {
-        border-top: 1px solid #CECECE;
+        position: relative;
         list-style: none;
+        border-top: 1px solid #CECECE;
+
+        &:hover {
+            border-top-color: transparent;
+            border-bottom-color: $yellow;
+
+            // hiding border top of neighboor
+            &:before {
+                position: absolute;
+                z-index: 8888;
+                bottom: -1px;
+                left: 50%;
+                transform: translateX(-50%);
+                content: '';
+                display: block;
+                @include box(100%, 1px);
+                background: #fff;
+            }
+        }
 
         &:last-child {
             border-bottom: 1px solid #CECECE;
@@ -69,6 +120,7 @@
     }
 
     &__link {
+        position: relative;
         padding: 10px 0;
         text-transform: uppercase;
         font-weight: 500;
@@ -77,7 +129,18 @@
         transition: all .3s ease;
 
         &:hover {
-            background: $yellow;
+            &:after {
+                background: $yellow;
+            }
+        }
+
+        &:after {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            @include box(120%, 100%);
+            z-index: -1;
+            content: '';
         }
     }
 
