--- a/Autoparts/scss/sections/sections.scss
+++ b/Autoparts/scss/sections/sections.scss
@@ -270,10 +270,25 @@
     &-card {
         position: relative;
 
+        &__img-container {
+            overflow: hidden;
+        }
+
+        &__img {
+            object-fit: cover;
+            transition: all .5s ease;
+        }
+
         &__btn {
             position: absolute;
             right: 20px;
             bottom: 20px;
+        }
+
+        &:hover {
+            .start-section-card__img {
+                transform: scale(1.1);
+            }
         }
     }
 }
