--- a/ZipLock/scss/sections/sections.scss
+++ b/ZipLock/scss/sections/sections.scss
@@ -505,7 +505,7 @@
         display: block;
         @include box(100%, vh(155px));
         content: '';
-        background-image: url('../../img/ZPLK2.png');
+        background-image: url('../../img/zplk2.png');
         background-size: vh(350px);
         background-repeat: repeat-x;
         z-index: -1;
@@ -522,7 +522,7 @@
         display: block;
         @include box(100%, vh(155px));
         content: '';
-        background-image: url('../../img/ZPLK.png');
+        background-image: url('../../img/zplk1.png');
         background-size: vh(350px);
         background-repeat: repeat-x;
         background-position: -15%;
