--- a/Ziplock/scss/_media.scss
+++ b/Ziplock/scss/_media.scss
@@ -638,8 +638,19 @@
             font-size: rem(18px);
         }
 
-        &__tel {
+        &__wrap {
             width: 100%;
+        }
+
+        &__tel {
+            padding: 20px 40px;
+            width: 100%;
+            font-size: rem(17px);
+        }
+
+        &__icon {
+            left: 10px;
+            width: 30px;
         }
 
         &__text {
@@ -727,6 +738,14 @@
 
         &:after {
             top: 55px;
+        }
+
+        .pocket {
+            border-radius: 40px;
+
+            &-bottom {
+                margin-top: 15px;
+            }
         }
 
         &__img {
