--- a/Kitchen/scss/_libs.scss
+++ b/Kitchen/scss/_libs.scss
@@ -1,6 +1,11 @@
 @import "../css_libs/bootstrap/scss/bootstrap-grid.scss";
-// @import "../css_libs/bootstrap/scss/utilities/_sizing.scss";
 
 // Slick
 @import "../css_libs/slick/slick.scss";
 @import "../css_libs/slick/slick-theme.scss";
+
+// Magnific popup
+@import "../css_libs/magnific-popup/magnific-popup.css";
+
+// Plyr
+@import "../css_libs/plyr/plyr.css";
