--- a/Kitchen/scss/main.scss
+++ b/Kitchen/scss/main.scss
@@ -20,6 +20,10 @@
 @import "sections/section-d.scss";
 // Section E
 @import "sections/section-e.scss";
+// Section G
+@import "sections/section-g.scss";
+// Other sections
+@import "sections/other-sections.scss";
 
 // Footer
 @import "sections/footer.scss";
