--- a/Kitchen/scss/sections/header.scss
+++ b/Kitchen/scss/sections/header.scss
@@ -26,7 +26,9 @@
 
     // Logo
     &__logo {
+        font-family: 'Montserrat';
         font-size: em(28px);
+        font-weight: 700;
     }
 
     // Nav
