--- a/Kitchen/scss/_fonts.scss
+++ b/Kitchen/scss/_fonts.scss
@@ -4,7 +4,7 @@
     font-family: 'Century Gothic';
     font-weight: 400;
     font-display: swap;
-    src: url('../fonts/CenturyGothic/centurygothic.ttf') format('ttf');
+    src: url('../fonts/CenturyGothic/centurygothic.woff') format('woff');
 }
 
 /* Bold */
@@ -12,5 +12,5 @@
     font-family: 'Century Gothic';
     font-weight: 700;
     font-display: swap;
-    src: url('../fonts/CenturyGothicBold/centurygothic_bold.ttf') format('ttf');
+    src: url('../fonts/CenturyGothicBold/centurygothic_bold.woff') format('woff');
 }
