--- a/Kitchen/scss/reset.scss
+++ b/Kitchen/scss/reset.scss
@@ -39,8 +39,8 @@ button {
 
 h1, h2, h3, h4, h5, h6 {
     color: $text;
-    font-family: "Century Gothic", sans-serif;
-    font-weight: 400;
+    font-family: "Raleway", sans-serif;
+    font-weight: 500;
 }
 
 p, span {
