--- a/Kitchen/scss/sections/section-a.scss
+++ b/Kitchen/scss/sections/section-a.scss
@@ -22,7 +22,8 @@
 
         &__title {
             color: $maroon;
-            font-size: em(24px);
+            font-family: 'Montserrat', sans-serif;
+            font-size: em(22px);
             font-weight: 700;
         }
 
