--- a/Kitchen/scss/sections/section-c.scss
+++ b/Kitchen/scss/sections/section-c.scss
@@ -70,6 +70,10 @@
                 @include flexbox(center, center);
             }
 
+            &:nth-child(2) {
+                top: -5px;
+            }
+
             img {
                 max-width: 100%;
                 max-height: 100%;
