--- a/Kitchen/scss/sections/section-d.scss
+++ b/Kitchen/scss/sections/section-d.scss
@@ -63,6 +63,7 @@
 
         &__title {
             margin-top: 15px;
+            color: $text;
             font-family: 'Montserrat', sans-serif;
             font-size: em(18px);
         }
