--- a/Kitchen/scss/_media.scss
+++ b/Kitchen/scss/_media.scss
@@ -691,7 +691,7 @@
 
             &-item {
                 margin: 0 10px;
-                width: 75vw;
+                width: 75vw !important;
             }
         }
     }
