--- a/SDS/scss/sections/footer.scss
+++ b/SDS/scss/sections/footer.scss
@@ -15,7 +15,7 @@
         left: -15px;
         @include box(41.5555%, 100%);
         content: '';
-        background-image: url('/img/footer_stickman.png');
+        background-image: url('../img/footer_stickman.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
