--- a/AppleGold/scss/pages/home.scss
+++ b/AppleGold/scss/pages/home.scss
@@ -5,7 +5,7 @@
     margin-bottom: -30px;
     padding: 65px 20px;
     @include box(100%, 623px);
-    background-image: url('/img/start_banner.svg');
+    background-image: url('../img/start_banner.svg');
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -147,12 +147,12 @@
         }
 
         &:nth-child(1) {
-            mask-image: url('/img/main_catalog_shape2_mirrored.svg');
+            mask-image: url('../img/main_catalog_shape2_mirrored.svg');
             mask-position: right top;
         }
 
         &:nth-child(4) {
-            mask-image: url('/img/main_catalog_shape2.svg');
+            mask-image: url('../img/main_catalog_shape2.svg');
             mask-position: left top;
 
             .main-catalog-item__title {
@@ -455,12 +455,12 @@
         border-radius: 20px;
         mask-size: cover;
         mask-repeat: no-repeat;
-        mask-image: url('/img/repair_shape.svg');
+        mask-image: url('../img/repair_shape.svg');
     }
 
     &-img {
         @include box(100%, 380px);
-        background-image: url('/img/repair_img.webp');
+        background-image: url('../img/repair_img.webp');
         background-size: 100% 100%;
         background-repeat: no-repeat;
     }
