Updata home page 2

--- a/AppleGold/scss/_media.scss
+++ b/AppleGold/scss/_media.scss
@@ -62,6 +62,11 @@
         }
     }
 
+    // Bottom navigation
+    .bottom-nav {
+        @include flexbox(space-between, center);
+    }
+
     //! Start banner
     .start-banner {
         margin-bottom: -26px;
