--- a/AppleGold/scss/sections/footer.scss
+++ b/AppleGold/scss/sections/footer.scss
@@ -79,3 +79,27 @@
         }
     }
 }
+
+//* Bottom navigation (mobile)
+.bottom-nav {
+    position: fixed;
+    z-index: 888;
+    bottom: 0;
+    left: 0;
+    display: none;
+    @include box(100%, 60px);
+    padding: 13px;
+    background: $light;
+
+    &-item {
+        @include flexbox(flex-start, center, column);
+
+        &__title {
+            margin-top: 5px;
+            color: $text;
+            font-size: em(10px);
+            font-weight: 500;
+            text-transform: uppercase;
+        }
+    }
+}
