--- a/AppleGold/scss/main.scss
+++ b/AppleGold/scss/main.scss
@@ -11,5 +11,10 @@
 
 // Pages
 @import './pages/home.scss';
+@import './pages/catalog.scss';
+@import './pages/cart.scss';
+@import './pages/dashboard.scss';
+@import './pages/product.scss';
+
 
 @import "media"; // Always at the end
