--- a/AppleGold/scss/sections/components.scss
+++ b/AppleGold/scss/sections/components.scss
@@ -1,3 +1,518 @@
+// Form
+.form {
+    &__title {
+        color: #fff;
+        font-size: em(20px);
+        font-weight: 500;
+    }
+
+    &__field, &__textarea textarea {
+        width: 100%;
+        padding: 14px 10px;
+        color: #fff;
+        font-size: em(14px);
+        font-weight: 500;
+        background: #2D2D2D;
+        border-radius: 6px;
+    }
+    
+    &__label {
+        display: block;
+        color: #fff;
+        font-size: em(18px);
+        font-weight: 500;
+    }
+
+    &__textarea {
+        textarea {
+            height: 90px;
+            resize: none;
+        }
+    }
+
+    &-radio + &-radio {
+        margin-top: 10px;
+    }
+    
+    &-radio {
+        width: 100%;
+        @include flexbox(flex-start);
+
+        input[type="radio"] {
+            position: relative;
+            @include box(20px);
+            appearance: none;
+            border: 1px solid #7a7a7a;
+            border-radius: 50%;
+
+            &:checked {
+                border-color: #fff;
+
+                &:after {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    @include box(10px);
+                    content: '';
+                    background: #fff;
+                    border-radius: 50%;
+                }
+            }
+        }
+
+        input[type="radio"]:checked + div {
+            span, small {
+                color: #fff;
+            }
+        }
+
+        span {
+            color: #7a7a7a;
+            font-size: em(14px);
+            font-weight: 500;
+        }
+
+        small {
+            margin-top: 5px;
+            display: block;
+            color: #7a7a7a;
+            font-size: em(10px);
+        }
+    }
+
+    &__btn {
+        width: 100%;
+        padding: 14px;
+        font-size: em(18px);
+    }
+
+    &__policy-text {
+        margin-top: 5px;
+        color: #fff;
+        font-size: em(11px);
+    }
+}
+
+// Cart bonus
+.cart-total {
+    padding: 12px;
+    background: $light;
+    border-radius: 12px;
+
+    &__title {
+        text-transform: uppercase;
+        font-size: em(22px);
+        font-weight: 500;
+    }
+
+    &__count {
+        @include flexbox(space-between, center);
+        width: 100%;
+        color: #7a7a7a;
+        font-size: em(14px);
+        font-weight: 500;
+    }
+
+    hr {
+        display: block;
+        @include box(100%, 1px);
+        background: $text;
+    }
+
+    &__cost {
+        @include flexbox(space-between, center);
+        width: 100%;
+
+        span {
+            font-weight: 500;
+
+            &:nth-child(1) {
+                text-transform: uppercase;
+                font-size: em(24px);
+            }
+
+            &:nth-child(2) {
+                font-size: em(20px);
+            }
+        }
+    }
+
+    &__btn {
+        @include flexbox(center, center);
+        padding: 14px;
+    }
+}
+
+.cart-bonus {
+    padding: 10px;
+    background: #232323;
+    border-radius: 12px;
+
+    &__title {
+        text-transform: uppercase;
+        color: #fff;
+        font-weight: 500;
+    }
+
+    &__text {
+        color: #7a7a7a;
+        font-weight: 500;
+
+        a {
+            text-decoration: underline;
+            color: #7a7a7a;
+        }
+    }
+
+    &-form {
+        @include flexbox(flex-start, flex-start, column);
+
+        &__btn {
+            margin-top: 8px;
+            @include flexbox(center, center);
+            padding: 14px;
+            width: 100%;
+            background: #fff;
+        }
+    }
+}
+
+// Filters
+.filters {
+    &__search {
+        position: relative;
+        width: 100%;
+        
+        input {
+            width: 100%;
+            padding: 8px 8px 8px 40px;
+            color: #fff;
+            font-size: em(14px);
+            background-color: transparent;
+            border: 1px solid #797979;
+            border-radius: 4px;
+        }
+
+        i {
+            position: absolute;
+            top: 50%;
+            left: 12px;
+            transform: translateY(-50%);
+            color: #797979;
+            font-family: "Font Awesome 6 Pro";
+            font-size: em(16px);
+            font-weight: 300;
+        }
+    }
+
+    &__sort {
+        position: relative;
+        margin-top: 5px;
+        width: 100%;
+
+        select {
+            @include box(100%, 35px);
+            padding: 8px 8px 8px 36px;
+            color: #797979;
+            background-color: transparent;
+            border: 1px solid #797979;
+            border-radius: 4px;
+            appearance: none;
+
+            option {
+                color: #fff;
+                background: #797979;
+            }
+        }
+
+        i {
+            position: absolute;
+            top: 55%;
+            left: 12px;
+            transform: translateY(-50%);
+            color: #797979;
+            font-family: "Font Awesome 6 Pro";
+            font-size: em(16px);
+            font-weight: 300;
+        }
+    }
+
+    &-group {
+        padding: 15px 10px;
+        background: #232323;
+        border-radius: 6px;
+    }
+
+    &-item + &-item {
+        margin-top: 35px;
+    }
+    
+    &-item {
+        &__title {
+            margin-bottom: 20px;
+            color: #fff;
+            text-transform: uppercase;
+            font-size: em(14px);
+            font-weight: 500;
+        }
+    }
+
+    &__colors {
+        input + input {
+            margin-left: 5px;
+        }
+
+        input {
+            position: relative;
+            @include box(24px);
+            appearance: none;
+            cursor: pointer;
+            border: 2px solid rgba($color: #FAFAFA, $alpha: .6);
+            border-radius: 6px;
+
+            &:checked {
+                border-color: $gold;
+
+                &:before {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    content: '\f00c'; /*  галочка */
+                    display: block;
+                    text-align: center;
+                    color: #fff;
+                    font-size: em(16px);
+                    font-family: "Font Awesome 6 Pro";
+                }
+            }
+        }
+    }
+
+    &__classic {
+        label + label {
+            margin-top: 10px;
+        }
+
+        label {
+            @include flexbox(flex-start, center);
+            width: 100%;
+            cursor: pointer;
+
+            input {
+                position: relative;
+                @include box(23px);
+                appearance: none;
+                border: 2px solid #7a7a7a;
+                border-radius: 4px;
+
+                &:checked {
+                    border-color: $gold;
+
+                    &:before {
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                        content: '\f00c'; /*  галочка */
+                        display: block;
+                        text-align: center;
+                        color: #fff;
+                        font-size: em(16px);
+                        font-family: "Font Awesome 6 Pro";
+                    }
+                }
+            }
+
+            span {
+                margin-left: 12px;
+                color: #fff;
+                font-size: em(14px);
+            }
+        }
+    }
+
+    &-price {
+        @include flexbox(flex-start, center, column);
+
+        input {
+            width: calc(50% - 5px);
+            padding: 8px;
+            font-size: em(14px);
+            border: 1px solid #7a7a7a;
+            border-radius: 5px;
+        }
+
+        span {
+            color: #fff;
+        }
+
+        &__slider {
+            margin-top: 35px;
+            position: relative;
+            z-index: 1;
+            @include box(100%, 25px);
+
+            &:after {
+                position: absolute;
+                top: 4px;
+                left: 0;
+                z-index: -1;
+                @include box(100%, 2px);
+                content: '';
+                background: $gold;
+            }
+
+            .ui-slider-handle {
+                position: absolute;
+                top: -6px; /* чтобы выровнять по центру */
+                transform: translateX(-50%); /* центрируем */
+                @include box(18px);
+                background: #fff;
+                border: 2px solid #DDDDDD;
+                border-radius: 50%;
+                cursor: pointer;
+                box-sizing: border-box;
+                transition: background 0.2s;
+
+                &:hover {
+                    background: #DDDDDD;
+                }
+
+                &:first-of-type[style*="left: 0%"]  {
+                    transform: translateX(0%);
+                }
+
+                &:last-of-type[style*="left: 100%"] {
+                    transform: translateX(-100%); /* у правого в конце сдвигаем на всю ширину */
+                }
+            }
+        }
+    }
+
+    &-mobile-nav {
+        @include flexbox(space-between, center);
+        padding: 15px;
+        height: 65px;
+        border-radius: 6px;
+        
+        * {
+            color: #fff;
+        }
+
+        .open-filters-btn, .open-search {
+            i {
+                font-size: em(25px);
+            }
+        }
+
+        .open-filters-text {
+            text-transform: uppercase;
+            font-size: em(18px);
+        }
+    }
+}
+
+// Product
+.products-section {
+    width: 100%;
+
+    .product {
+        width: calc(16.6% - 5px);
+    }
+}
+
+.product {
+    &__img {
+        position: relative;
+        @include box(100%, 225px);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        border-radius: 10px;
+    }
+
+    &__title {
+        margin-top: 12px;
+        display: block;
+        color: #fff;
+        font-size: em(17px);
+        font-weight: 500;
+    }
+
+    &__price {
+        color: #fff;
+        font-size: em(24px);
+    }
+
+    &__overprice {
+        margin-left: 13px;
+        text-decoration: line-through;
+        color: #656565;
+        font-size: em(18px);
+    }
+
+    &__btn {
+        margin-top: 13px;
+        padding: 12px;
+        @include flexbox(center, center);
+        width: 100%;
+    }
+
+    &__favorite {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+    }
+}
+
+.product-slugs {
+    position: absolute;
+    left: 5px;
+    bottom: 5px;
+    @include flexbox(flex-start, flex-start, column);
+
+    &__item + &__item {
+        margin-top: 5px;
+    }
+
+    &__item {
+        padding: 5px;
+        text-align: center;
+        color: $text;
+        font-size: em(10px);
+        background: #88E686;
+        border-radius: 3px;
+    }
+}
+
+// Add to favorite
+.add-to-favorite {
+    @include flexbox(center, center);
+    @include box(31px);
+    border-radius: 5px;
+    background: #D9D9D9;
+
+    &:hover {
+        i {
+            transform: scale(1.2);
+        }
+    }
+    
+    &.added {
+        i {
+            color: #fb3577;
+        }
+    }
+
+    i {
+        color: #fff;
+        font-size: em(18px);
+        transition: all .3s ease;
+    }
+}
+
 // Modal
 .modal {
     position: fixed;
@@ -28,6 +543,10 @@
     &-form {
         width: 455px;
 
+        &__title {
+            text-transform: uppercase;
+        }
+
         &__field + &__field {
             margin-top: 5px;
         }
@@ -37,6 +556,25 @@
             padding: 10px;
             color: $text;
             font-size: em(14px);
+        }
+
+        &__file-upload {
+            position: relative;
+            margin-bottom: 15px;
+            @include box(120px);
+            border-radius: 12px;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+
+            input {
+                position: absolute;
+                top: 0;
+                left: 0;
+                @include box(100%);
+                opacity: 0;
+                cursor: pointer;
+            }
         }
 
         &__submit {
